Fixed presentation on narrow resolutions

--- a/amazin-product-box/styles.css
+++ b/amazin-product-box/styles.css
@@ -72,6 +72,10 @@
 }
 
 @media screen and (max-width: 512px) {
+    .amazin-product-box-image-row {
+        flex-direction:column;
+    }
+
     .amazin-product-box-left {
         width:100%;
     }
